Docker-compose nuevo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,59 +1,34 @@
-# Versión de la sintaxis de Docker Compose
-version: "3.8"
-
-# --- Definición de nuestros contenedores (Servicios) ---
+version: '3.8'
 services:
-  # 1. El Servicio de Base de Datos
-  db:
-    image: mariadb:latest
-    container_name: wallet-db-compose
-    restart: always
-    environment:
-      # Pasamos las variables de entorno
-      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
-      MYSQL_DATABASE: ${DB_DATABASE}
-    ports:
-      # Exponemos el puerto solo para DBeaver (opcional)
-      - "3306:3306"
-    volumes:
-      # Esto hace que los datos de la DB se guarden en tu PC
-      # y sobrevivan si borras el contenedor.
-      - wallet-data:/var/lib/mysql
-    networks:
-      # Lo conectamos a nuestra red interna
-      - microservicios-net
-
-  # 2. El Servicio de tu API (Wallet Service)
-  api:
-    container_name: wallet-api-compose
-    # En lugar de usar una imagen, le decimos que "construya"
-    # usando el Dockerfile de esta carpeta
+  backend:
     build: .
-    ports:
-      # Expone el puerto de tu API a tu PC
-      - "3001:3001"
+    container_name: nest-backend
     restart: always
-    environment:
-      # Le pasamos las variables de tu .env a la API
-      PORT: 3001
-      DB_HOST: db # <-- ¡LA CLAVE! Habla con la DB usando su nombre de servicio
-      DB_PORT: ${DB_PORT}
-      DB_USER: ${DB_USER}
-      DB_PASSWORD: ${DB_PASSWORD}
-      DB_DATABASE: ${DB_DATABASE}
+    ports:
+      - '3000:3000'
+    env_file:
+      - .env
     networks:
-      # Lo conectamos a la misma red
       - microservicios-net
     depends_on:
-      # Le dice a Docker que espere a que la DB esté lista
-      # antes de arrancar la API.
       - db
 
-# --- Definiciones de Redes y Volúmenes ---
+  db:
+    image: mariadb:10.9
+    container_name: mariadb
+    restart: always
+    networks:
+      - microservicios-net
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASS}
+      MYSQL_DATABASE: ${DB_NAME}
+    ports:
+      - '3307:3306' # 3307 en tu PC → 3306 dentro del container
+    volumes:
+      - mariadb_data:/var/lib/mysql
 
-# Definimos el "volumen" (almacenamiento) que usamos arriba
 volumes:
-  wallet-data:
+  mariadb_data:
 
 # Le decimos a Docker que "microservicios-net"
 # es una red externa que ya existe
