--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
 
   db:
     image: mariadb:10.9
-    container_name: mariadb
+    container_name: mariadb2
     restart: always
     networks:
       - microservicios-net
@@ -23,7 +23,7 @@ services:
       MYSQL_ROOT_PASSWORD: ${DB_PASS}
       MYSQL_DATABASE: ${DB_NAME}
     ports:
-      - '3307:3306' # 3307 en tu PC → 3306 dentro del container
+      - '3310:3306' # 3307 en tu PC → 3306 dentro del container
     volumes:
       - mariadb_data:/var/lib/mysql
 
